--- a/Angular/currency_conversion/package.json
+++ b/Angular/currency_conversion/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "^15.2.0",
     "apexcharts": "^3.37.1",
     "canvasjs": "^1.8.3",
+    "chart.js": "^4.2.1",
+    "chartjs-plugin-annotation": "^2.1.2",
     "ng-apexcharts": "^1.7.4",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
